# Aevryn

./: .dockerignore  .gitattributes  .gitignore  AEVRYN_SYSTEM_OUTLINE.md  Dockerfile  LICENSE_NOTICE.md  README.md  SCENESMITH_SYSTEM_OUTLINE.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
docs/: ACCEPTABLE_USE_POLICY.md  AEVRYN_AI_EXTRACTION_ALPHA.md  AEVRYN_AI_PROVIDER_DATA_USE_READINESS.md  AEVRYN_AI_PROVIDER_DISCLOSURE_DECISION.md  AEVRYN_AI_PROVIDER_REVIEW.md  AEVRYN_ALIAS_PROVISIONING_RECORD.md  AEVRYN_API_SECURITY_HARDENING.md  AEVRYN_ARCHITECTURE.md  AEVRYN_AUDIT_LEDGER.md  AEVRYN_AUDIT_STORAGE_POLICY_DECISION.md  AEVRYN_AUTHENTICATION.md  AEVRYN_BACKEND_API.md  AEVRYN_BACKGROUND_WORKERS.md  AEVRYN_BACKUP_RECOVERY_AUDIT_READINESS.md  AEVRYN_BACKUP_RESTORE_RUNBOOK.md  AEVRYN_BACKUP_RETENTION.md  AEVRYN_BACKUP_RETENTION_DECISION.md  AEVRYN_BRANCH_PROTECTION.md  AEVRYN_CANON_ENGINE.md  AEVRYN_CANON_REBUILD_TEST.md  AEVRYN_CANON_UPDATING.md  AEVRYN_CHARACTER_ENGINE.md  AEVRYN_CLOUDFLARE_PAGES_DEPLOYMENT.md  AEVRYN_CLOUD_RUN_DEPLOYMENT.md  AEVRYN_CONTENT_CLASSIFICATION.md  AEVRYN_DATABASE_PRIVILEGE_HARDENING.md  AEVRYN_DATA_MODEL.md  AEVRYN_DEPENDENCY_AUDIT.md  AEVRYN_ENTITY_EXTRACTION.md  AEVRYN_ENTITY_RESOLUTION.md  AEVRYN_EXPORT_ENGINE.md  AEVRYN_FUTURE_IDEAS.md  AEVRYN_GITHUB_HOSTED_CONTROLS.md  AEVRYN_IMPORT_FORMAT_MATRIX.md  AEVRYN_INTERNAL_ALPHA.md  AEVRYN_INTERNAL_ALPHA_CHECKLIST.md  AEVRYN_LOGGING_POLICY.md  AEVRYN_MONITORING.md  AEVRYN_OPENAI_PRODUCTION_ACCOUNT_VERIFICATION.md  AEVRYN_OPENAI_PROVIDER_REVIEW_2026_07_24.md  (+104 more)
snapshots/: README.md
tests/: __init__.py  test_audit_ledger.py  test_auth_api.py  test_authentication.py  test_backend_api.py  test_background_workers.py  test_canon_database.py  test_canon_engine.py  test_canon_prompt_builder.py  test_canon_rebuild.py  test_canon_updating.py  test_character_card_builder.py  test_character_engine.py  test_cli.py  test_core_models.py  test_entity_extraction.py  test_entity_resolution.py  test_epub_import.py  test_evidence_bounded_ai_extraction.py  test_export_engine.py  test_export_storage.py  test_file_import_adapters.py  test_import_storage.py  test_internal_alpha.py  test_json_utils.py  test_logging_policy.py  test_managed_identity.py  test_performance.py  test_phase11_security.py  test_phase9_export.py  test_postgresql_background_queue.py  test_presentation_engine.py  test_project_database.py  test_project_runner.py  test_prompt_engine.py  test_public_api.py  test_readme.py  test_scene_analyzer.py  test_scene_engine.py  (+13 more)
(+220 files in other folders)
