[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "aevryn"
version = "0.1.0"
description = "AI-powered story continuity engine for maintaining evidence-backed canon state."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Aetherra Labs" },
]
license = { text = "All rights reserved" }
keywords = [
    "story-continuity",
    "canon",
    "story-analysis",
    "ai-assisted-storytelling",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastapi>=0.116",
]

[project.scripts]
aevryn = "aevryn.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.6",
    "mypy>=1.11",
]
platform = [
    "uvicorn>=0.30",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]
